#539418 by esmerel: Remove reference to panel page from module description.
#535722: Fix incorrect "title" tag on categories in add content modal.
Fix a bug with drag and drop UI that caused panes to break after other panes were added.
#538900: Fix bug with flexible when having multiple regions of the same name if they have a space.
#552014: Hide Substitutions fieldset if there are no contexts.

Panels 6.x-3.0-rc1
==================

#515316: Add permission to view Panels admin dashboard.
#298174: Recursion defense for mini panels.
#502670: Extra HTML designed only for flexible layout admin accidentally rendered.
#507516: "Default" panel style on regions not being properly utilized.
#476440: Seriously, cloning variants really realy fixed.
#518360 by joshk: Panels node form doesn't have format properly associated.
#525340 by markus_petrux: Dashboard improperly initializing a variable.
#460902 by dmmckenna: Fix problem installing panels from an install profile.
#488278: Preview on panel nodes prior to creation caused errors.
#475920: Create "use panels dashboard" permission to more easily control who can and cannot use it.
#384552: Fix incompatibilities with theme developer. Drag & drop screen does not need to be themable.

Panels 6.x-3.0-beta4
====================
Note: beta3 skipped to stay even with CTools beta numbers.
Removal of non-functioning bulk export module in favor of the new one in CTools.
Update to require CTools API 1.1.0
Updates to work with the new Page Manager UI in CTools.

Panels 6.x-3.0-beta2
====================
Update to require CTools based upon its advertised API version number.
Update code to ensure that the dead 'panels simple cache' module is really dead.
Attempt to go back further in history for a Panels 1 upgrade path.
Fix for making sure Panels completely disables itself if using incompatible version of CTools.
Update CSS caching on panel page and panel context to use ctools_css_store instead of remembering the filename.