@@ -49,7 +49,7 @@
   width: 16px;
   height: 18px;
   float: left;
-  background: url('../images/sprite.png') no-repeat 0 -1178px;  
+  background: url('../images/sprite.png') no-repeat 0 -1178px;
 /*  background: url('../images/sprite.png') no-repeat -166px -582px; */
 }
 
@@ -71,7 +71,7 @@
   margin: 0 5px 0 0;
   float: none;
   display: block;
-  background: url('../images/sprite.png') no-repeat 0 -1178px;  
+  background: url('../images/sprite.png') no-repeat 0 -1178px;
 }
 
 #panels-dnd-main .panel-pane,
@@ -210,7 +210,7 @@
   border: 1px solid #000;
   width: 600px;
   text-align: left;
-} 
+}
 
 .panels-modal-content .modal-title {
   font-size: 120%;
@@ -311,6 +311,12 @@ a.close img {
 .panels-section-column-categories {
   width: 173px;
   margin-left: -173px;
+}
+
+.panels-categories-description {
+  padding: 0 1em;
+  text-align: center;
+  vertical-align: center;
 }
 
 * html .panels-section-column-categories {
@@ -433,7 +439,7 @@ html.js div.panels-display-links div.ctools-dropdown-container {
 }
 
 html.js div.panels-display-links div.ctools-dropdown-container ul li li a {
-  width: 250px; 
+  width: 250px;
 }
 
 html.js div.panels-display-links div.ctools-dropdown-container ul li a {
@@ -521,7 +527,7 @@ div.messages div.messages {
   background: none;
   border: none;
   margin: 0;
-  padding: 0; 
+  padding: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
 }
